--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </form>
         </div>
         <a href="#" id="reset-password" class="text-[18px] mb-[10px] text-purple-700 hover:text-purple-900">Forgot your password?</a>
-        <button type="button" id="submit-button" class="w-[200px] h-[50px] text-[22px] font-[500] text-white bg-[#7a16b4] border-transparent rounded-[25px] shadow-[10px] transition-all ease duration-500 hover:bg-white hover:border-2 hover:border-black hover:text-[#7a16b4] disabled:opacity-[0.5] disabled:cursor-not-allowed disabled:pointer-events-none">Sign In</button>
+        <button type="button" id="submit-button" class="w-[200px] h-[50px] text-[22px] font-[500] text-white bg-[#7a16b4] border-transparent rounded-[25px] shadow-[10px] transition-all ease duration-500 hover:bg-white hover:border-2 hover:border-black hover:text-[#7a16b4] cursor-pointer disabled:opacity-[0.5] disabled:cursor-not-allowed disabled:pointer-events-none">Sign In</button>
       </div>
     </div>
 
@@ -51,7 +51,7 @@
       <h1 class="pt-[150px] mb-[50px] text-[50px] font-[600]">Hello! What's up?</h1>
       <h4 class="text-[24px] font-[600]">Create an account to take advantage of everything</h4>
       <h4 class="text-[24px] font-[600]">our site has to offer. Enjoy!</h4>
-      <button type="button" class="w-[250px] h-[70px] bg-[#7a16b4] border-solid border-[5px] border-white rounded-[15px] text-[30px] font-[600] mt-[50px] text-white transition-all ease duration-500 hover:bg-white hover:text-black">Sign Up!</button>
+      <button type="button" class="w-[250px] h-[70px] bg-[#7a16b4] border-solid border-[5px] border-white rounded-[15px] cursor-pointer text-[30px] font-[600] mt-[50px] text-white transition-all ease duration-500 hover:bg-white hover:text-black">Sign Up!</button>
     </div>
   </main>
 </body>
